--- a/serverless.yml
+++ b/serverless.yml
@@ -97,3 +97,6 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+plugins:
+  - serverless-step-functions
